[tool.poetry]
name = "project1-mikhailov-dmitry-m25-555"
version = "0.1.0"
description = ""
authors = ["Tinny <yozhicksun@gmail.com>"]
readme = "README.md"
packages = [
    { include = "labyrinth_game" },
]

[tool.poetry.dependencies]
python = ">=3.13"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
